# qwen3-tts-rs

./: .gitignore  CANDLE_TO_BURN_MIGRATION_PLAN.md  CLAUDE.md  Cargo.toml  Makefile  README.md
.cargo/: config.toml
benches/: e2e_bench.rs
docs/: BENCHMARKS.md  CONTINUATION.md  PERFORMANCE_JOURNAL.md  PERFORMANCE_TESTING.md  QWEN3_TTS_ARCHITECTURE.md  VALIDATION.md
examples/: check_layer.rs  e2e_inference.rs  inspect_model.rs  inspect_tensors.rs  tts.rs  voice_clone_gen.rs
scripts/: download_test_data.sh  quality_check.py  test-variants.py  test-variants.sh
src/: lib.rs
src/audio/: io.rs  mel.rs  mod.rs  resample.rs
src/generation/: mod.rs  sampling.rs  tts.rs
src/models/: code_predictor.rs  config.rs  kv_cache.rs  mod.rs  qwen3_tts.rs  speaker.rs  talker.rs  transformer.rs
src/models/codec/: causal_conv.rs  causal_trans_conv.rs  convnext_block.rs  decoder.rs  decoder_12hz.rs  decoder_block.rs  mod.rs  quantizer.rs  snake_beta.rs
src/tokenizer/: text.rs
tests/: debug_decoder_stages.rs  integration.rs  reference_validation.rs
tools/: analyze_audio.py  check_frame1.py  compare_audio.py  compare_constructions.py  compare_decoder_stages.py  compare_forward.py  debug_attention_pos1.py  debug_decoder.py  debug_decoder_detailed.py  debug_decoder_stages.py  debug_forward.py  debug_frame1.py  debug_full_forward.py  debug_official_forward.py  debug_official_full_forward.py  debug_qknorm.py  decode_with_official.py  export_decoder_reference.py  export_e2e_reference.py  export_e2e_with_official.py  export_reference_values.py  generate_comparison.py  generate_correct_flow.py  generate_correct_greedy.py  generate_customvoice_audio.py  generate_customvoice_correct.py  generate_customvoice_tts.py  generate_reference_audio.py  generate_with_trailing_text.py  pyproject.toml  regenerate_decoder_reference.py  test_trailing_text.py  trace_custom_voice.py  trace_layer_diff.py  trace_official_generate.py
