[project]
name = "tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.0,<2.4",
    "packaging>=26.0",
    "safetensors>=0.7.0",
    "scipy>=1.17.0",
    "soundfile>=0.13.1",
    "torch>=2.10.0",
    "transformers>=4.57.6",
]
